ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src tests

EXTRA_DIST = bootstrap

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libPRISM-0.1.pc

CLEANFILES = $(DIST_ARCHIVES)

MAINTAINERCLEANFILES = \
  Makefile \
  Makefile.in \
  aclocal.m4 \
  autom4te.cache \
  config.log \
  config.status \
  configure \
  install-sh \
  missing
